// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`displays an error message if there is a sign in error 1`] = `
<div
  className="root"
>
  <h2
    className="title"
  >
    <mock-FormattedMessage
      defaultMessage="Sign-in to Your Account"
      id="signIn.titleText"
    />
  </h2>
  <FormError
    errors={
      Array [
        null,
        Object {
          "graphQLErrors": Array [
            Object {
              "message": "The account sign-in was incorrect or your account is disabled temporarily. Please wait and try again later.",
            },
          ],
        },
      ]
    }
  />
  <form
    className="form"
    onKeyDown={[Function]}
    onReset={[Function]}
    onSubmit={[Function]}
  >
    <div
      className="root"
    >
      <label
        className="label"
      >
        Email address
      </label>
      <span
        className="root"
        style={
          Object {
            "--iconsAfter": 0,
            "--iconsBefore": 0,
          }
        }
      >
        <span
          className="input"
        >
          <input
            autoComplete="email"
            className="input"
            id="ea5c0a96-f717-4622-b939-b61cbd7a7924"
            name="email"
            onBlur={[Function]}
            onChange={[Function]}
            value=""
          />
        </span>
        <span
          className="before"
        />
        <span
          className="after"
        />
      </span>
      <p
        className="root"
      />
    </div>
    <div
      className="root"
    >
      <label
        className="label"
      >
        Password
      </label>
      <span
        className="root"
        style={
          Object {
            "--iconsAfter": 1,
            "--iconsBefore": 0,
          }
        }
      >
        <span
          className="input"
        >
          <input
            autoComplete="current-password"
            className="input"
            id="5931c508-77eb-41e9-8ffe-47ae65aa8489"
            name="password"
            onBlur={[Function]}
            onChange={[Function]}
            type="password"
            value=""
          />
        </span>
        <span
          className="before"
        />
        <span
          className="after"
        >
          <i />
        </span>
      </span>
      <p
        className="root"
      />
    </div>
    <div
      className="forgotPasswordButtonContainer"
    >
      <i />
    </div>
    <div
      className="buttonsContainer"
    >
      <i />
      <i />
    </div>
  </form>
</div>
`;

exports[`renders correctly 1`] = `
<div
  className="root"
>
  <h2
    className="title"
  >
    <mock-FormattedMessage
      defaultMessage="Sign-in to Your Account"
      id="signIn.titleText"
    />
  </h2>
  <FormError
    errors={
      Array [
        null,
        null,
      ]
    }
  />
  <form
    className="form"
    onKeyDown={[Function]}
    onReset={[Function]}
    onSubmit={[Function]}
  >
    <div
      className="root"
    >
      <label
        className="label"
      >
        Email address
      </label>
      <span
        className="root"
        style={
          Object {
            "--iconsAfter": 0,
            "--iconsBefore": 0,
          }
        }
      >
        <span
          className="input"
        >
          <input
            autoComplete="email"
            className="input"
            id="b2e9c937-51b1-48fa-bfe2-68c81c416e3d"
            name="email"
            onBlur={[Function]}
            onChange={[Function]}
            value=""
          />
        </span>
        <span
          className="before"
        />
        <span
          className="after"
        />
      </span>
      <p
        className="root"
      />
    </div>
    <div
      className="root"
    >
      <label
        className="label"
      >
        Password
      </label>
      <span
        className="root"
        style={
          Object {
            "--iconsAfter": 1,
            "--iconsBefore": 0,
          }
        }
      >
        <span
          className="input"
        >
          <input
            autoComplete="current-password"
            className="input"
            id="71301dad-0181-41da-b068-fdc255d29320"
            name="password"
            onBlur={[Function]}
            onChange={[Function]}
            type="password"
            value=""
          />
        </span>
        <span
          className="before"
        />
        <span
          className="after"
        >
          <i />
        </span>
      </span>
      <p
        className="root"
      />
    </div>
    <div
      className="forgotPasswordButtonContainer"
    >
      <i />
    </div>
    <div
      className="buttonsContainer"
    >
      <i />
      <i />
    </div>
  </form>
</div>
`;
